fix: filter selectors alignment

--- a/assets/scss/_community-content-filter.scss
+++ b/assets/scss/_community-content-filter.scss
@@ -36,6 +36,7 @@
       @include media-breakpoint-down(xs) {
         width: 100%;
         margin-bottom: 4px;
+        justify-content: flex-start;
       }
     }
     &__label {
